# agent

./: .env  .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  myagent.db
backend/: myagent.db  requirements.txt  run.py  start_server.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: context.py  loop.py  orchestrator.py  planner.py  state.py
backend/app/agents/: base.py  coder.py  debugger.py  documentation.py  reviewer.py  security_agent.py  tester.py
backend/app/api/: websocket.py
backend/app/checkpoints/: manager.py
backend/app/database/: session.py
backend/app/intelligence/: architecture_analyzer.py  dependency_graph.py  impact_analysis.py  project_graph.py  requirement_graph.py
backend/app/llm/: ollama.py  provider.py  router.py  streaming.py
backend/app/memory/: manager.py
backend/app/schemas/: agent.py
backend/app/security/: command_policy.py  path_policy.py  permissions.py  sandbox.py  secret_detector.py
backend/app/tools/: base.py  registry.py  utils.py
backend/app/verification/: runner.py
cli/: pyproject.toml
cli/myagent/: main.py
cli/myagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/myagent/client/: api.py
cli/myagent/tui/: __init__.py  animation.py  app.py  commands.py  input.py
cli/myagent/tui/panels/: __init__.py  agent.py  context.py  explorer.py  header.py  status.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx  StatusBar.tsx
(+57 files in other folders)
