[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myagent"
version = "1.0.0"
description = "Local Autonomous AI Coding Agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "MyAgent"},
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
myagent = "myagent.main:main"

[tool.setuptools.packages.find]
include = ["myagent*"]
